--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-            <a href="./recipes/macaroni.html">Simple Macaroni Recipe</a>
-
+            <ul>
+                <li><a href="./recipes/macaroni.html">Simple Macaroni Recipe</a></li>
+                <li><a href="./recipes/chicken.html">Simple Chicken Breast Recipe</a></li>
+                <li><a href="./recipes/chili.html">Simple Chili Recipe</a></li>
+            </ul>
     </body>
 </html>
